WSPM-Profiles support now buildings. Wspm calculation is working again! Added Phenomenon support to IObservation Removed unsused NumberKey